# oif-solver

./: .gitignore  API_IMPLEMENTATION.md  ARCHITECTURE_PROPOSAL.md  Cargo.toml  InputSettler7683_selectors.json  LICENSE  OIF Solver Refactoring Implementation Guide 23acbd12786080ae92acfc3030e1fb6c.md  OIF Solver Requirements 229cbd12786080d9b5a6d78f20b4c5b7.html  OVERVIEW.md  README.md  TECHNICAL_ARCHITECTURE.md  config.example.toml  refactor-journal.md  refactor.md  rustfmt.toml  verify_transaction.sh
config/: demo.toml  example.toml  local.toml  offchain-example.toml
crates-old/solver-config/: Cargo.toml
crates-old/solver-core/: Cargo.toml
crates-old/solver-core/src/: lib.rs  utils.rs
crates-old/solver-delivery/: Cargo.toml
crates-old/solver-delivery/src/: lib.rs
crates-old/solver-discovery/: README.md
crates-old/solver-discovery/src/: lib.rs
crates-old/solver-plugin/: README.md
crates-old/solver-plugin/src/: lib.rs
crates-old/solver-plugin/src/delivery/: mod.rs
crates-old/solver-plugin/src/discovery/offchain/: mod.rs
crates-old/solver-plugin/src/discovery/onchain/: eip7683.rs
crates-old/solver-plugin/src/order/: processor.rs
crates-old/solver-plugin/src/settlement/: mod.rs
crates-old/solver-service/: README.md
crates-old/solver-settlement/: README.md
crates-old/solver-state/: Cargo.toml
crates-old/solver-state/src/: lib.rs
crates-old/solver-types/: Cargo.toml
crates-old/solver-types/src/: lib.rs
crates-old/solver-types/src/plugins/: delivery.rs  settlement.rs
crates/solver-account/: Cargo.toml
crates/solver-account/src/: lib.rs
crates/solver-account/src/implementations/: local.rs
crates/solver-chains/: Cargo.toml
crates/solver-chains/src/: lib.rs  registry.rs  utils.rs
crates/solver-chains/src/implementations/: mod.rs
crates/solver-chains/src/implementations/evm/: ethers_adapter.rs  mod.rs
crates/solver-config/: Cargo.toml  README.md
crates/solver-config/src/: lib.rs  loader.rs  serde_helpers.rs  types.rs
crates/solver-core/: Cargo.toml  README.md  STORAGE.md
crates/solver-core/src/: coordinator.rs  engine.rs  error.rs  event_bus.rs  lib.rs  lifecycle.rs  registry.rs
crates/solver-delivery/: Cargo.toml  README.md
crates/solver-delivery/src/: lib.rs  types.rs
crates/solver-delivery/src/implementations/: mod.rs  oz_relayer.rs  rpc.rs
crates/solver-delivery/src/implementations/evm/: alloy.rs
crates/solver-discovery/: Cargo.toml  README.md
crates/solver-discovery/src/: discovery.rs  events.rs  lib.rs  lifecycle.rs  mod.rs  monitor.rs  pipeline.rs  types.rs
crates/solver-discovery/src/implementations/: eip7683.rs  mod.rs
crates/solver-discovery/src/implementations/offchain/: _7683.rs
crates/solver-discovery/src/implementations/onchain/: _7683.rs
crates/solver-discovery/src/sources/: mod.rs  offchain.rs  onchain.rs
crates/solver-liquidity/: Cargo.toml
crates/solver-liquidity/src/: lib.rs
crates/solver-liquidity/src/implementations/: mod.rs
crates/solver-monitoring/: Cargo.toml
crates/solver-monitoring/src/: health.rs  lib.rs  metrics.rs  tracing.rs
crates/solver-oracles/: Cargo.toml
crates/solver-oracles/src/: lib.rs
crates/solver-oracles/src/implementations/: mod.rs
crates/solver-order/: Cargo.toml
crates/solver-order/src/: lib.rs
crates/solver-order/src/implementations/standards/: _7683.rs
crates/solver-order/src/implementations/strategies/: simple.rs
crates/solver-orders/: Cargo.toml
crates/solver-orders/src/: classification.rs  factory.rs  lib.rs  registry.rs
crates/solver-orders/src/implementations/: mod.rs
crates/solver-orders/src/implementations/eip7683/: factory.rs  gasless.rs  mod.rs  onchain.rs  types.rs
crates/solver-plugin/: Cargo.toml  README.md
crates/solver-plugin/src/: factory.rs  lib.rs
crates/solver-plugin/src/delivery/: mod.rs
crates/solver-plugin/src/delivery/evm/: alloy.rs  ethers.rs  mod.rs
crates/solver-plugin/src/discovery/: mod.rs
crates/solver-plugin/src/discovery/offchain/: README.md  api_poller.rs  mod.rs  webhook.rs
crates/solver-plugin/src/discovery/onchain/: eip7683.rs  mod.rs
crates/solver-plugin/src/order/: eip7683.rs  mod.rs  processor.rs
crates/solver-plugin/src/settlement/: arbitrum.rs  direct.rs  mod.rs
crates/solver-plugin/src/state/: file.rs  memory.rs  mod.rs
crates/solver-service/: Cargo.toml  README.md
crates/solver-service/src/: api.rs  cli.rs  lib.rs  main.rs  server.rs  service.rs
crates/solver-service/src/apis/: mod.rs  quote.rs
crates/solver-service/src/implementations/: account.rs  delivery.rs  discovery.rs  mod.rs  order.rs  settlement.rs  storage.rs  strategy.rs
crates/solver-settlement/: Cargo.toml  README.md
crates/solver-settlement/src/: lib.rs  manager.rs  types.rs
crates/solver-settlement/src/encoders/: eip7683.rs  mod.rs
crates/solver-settlement/src/implementations/: arbitrum.rs  direct.rs  mod.rs
crates/solver-state/: Cargo.toml  README.md
crates/solver-state/src/: lib.rs  manager.rs  queue.rs  storage.rs  types.rs
crates/solver-state/src/implementations/: file.rs  memory.rs  mod.rs
crates/solver-storage/: Cargo.toml
crates/solver-storage/src/: lib.rs
crates/solver-storage/src/implementations/: file.rs
crates/solver-strategies/: Cargo.toml
crates/solver-strategies/src/: lib.rs
crates/solver-types/: Cargo.toml  README.md
crates/solver-types/src/: account.rs  api.rs  chains.rs  common.rs  delivery.rs  discovery.rs  errors.rs  events.rs  lib.rs  oracles.rs  order.rs  orders.rs  settlement.rs  validation.rs
crates/solver-types/src/configs/: mod.rs
crates/solver-types/src/plugins/: base.rs  delivery.rs  discovery.rs  mod.rs  order.rs  settlement.rs  state.rs
crates/solver-types/src/standards/: eip7683.rs  mod.rs
crates/solver-validators/: Cargo.toml
crates/solver-validators/src/: lib.rs
scripts/: README.md  create-order.sh  demo.sh  setup_local_nodes.sh  setup_local_test.sh  test_api.sh  test_quote_api.sh
scripts/demo/: monitor_api.sh  send_intent.sh  setup_local_anvil.sh
