[workspace]
resolver = "2"
members = [
    "crates/solver-types",
    "crates/solver-core",
    "crates/solver-config",
    "crates/solver-storage",
    "crates/solver-account",
    "crates/solver-delivery",
    "crates/solver-discovery",
    "crates/solver-order",
    "crates/solver-settlement",
    "crates/solver-service",
]
default-members = ["crates/solver-service"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nahim.terrazas@openzeppelin.com", "nami@openzeppelin.com"]
license = "MIT"
repository = "https://github.com/openintentsframework/oif-solver"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum
alloy = "1.0.22"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Common utilities
arc-swap = "1.7"
dashmap = "6.0"
futures = "0.3"
chrono = "0.4"
hex = "0.4"
sha3 = "0.10"
tokio-stream = "0.1"
async-stream = "0.3"
rust_decimal = { version = "1.35", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
backoff = { version = "0.4", features = ["tokio"] }
priority-queue = "2.0"
bytes = "1.8"

# HTTP and web
reqwest = { version = "0.12.22", features = ["json"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# CLI and config
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.9.2"
serde_yaml = "0.9"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Testing
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
