[package]
name = "solver-delivery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
solver-types = { path = "../solver-types" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Logging
tracing.workspace = true

# Common utilities
uuid.workspace = true
bytes.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
