[package]
name = "solver-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
solver-types = { path = "../solver-types" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Common utilities
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Collections
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
