[package]
name = "solver-account"
version = "0.1.0"
edition = "2021"

[dependencies]
solver-types = { path = "../solver-types" }
async-trait = "0.1"
thiserror = "1.0"
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-consensus = { version = "0.8" }
alloy-rpc-types = { version = "0.8" }