[package]
name = "solver-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "validate-config"
path = "src/bin/validate-config.rs"

[dependencies]
solver-types = { path = "../solver-types" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }