[package]
name = "solver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytes = "1.5"

# Internal dependencies
solver-types = { path = "../solver-types" }
solver-config = { path = "../solver-config" }
solver-state = { path = "../solver-state" }
solver-discovery = { path = "../solver-discovery" }
solver-delivery = { path = "../solver-delivery" }
solver-plugin = { path = "../solver-plugin" }

# Other dependencies
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
