[package]
name = "solver-order"
version = "0.1.0"
edition = "2021"

[dependencies]
solver-types = { path = "../solver-types" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
alloy-primitives = { version = "0.8", features = ["serde"] }
tracing = "0.1"
