[package]
name = "solver-order"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8"
alloy-dyn-abi = "0.8"
alloy-sol-types = "0.8"
async-trait = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"