[package]
name = "solver-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "solver-service"
path = "src/main.rs"

[dependencies]
# Internal dependencies
solver-types = { path = "../solver-types" }
solver-core = { path = "../solver-core" }
solver-config = { path = "../solver-config" }
solver-delivery = { path = "../solver-delivery" }
solver-discovery = { path = "../solver-discovery" }
solver-plugin = { path = "../solver-plugin" }

toml = "0.7"

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow.workspace = true

# Utilities
hex.workspace = true
bytes.workspace = true
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
