[package]
name = "solver-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver"
path = "src/main.rs"

[dependencies]
solver-types = { path = "../solver-types" }
solver-core = { path = "../solver-core" }
solver-config = { path = "../solver-config" }
solver-storage = { path = "../solver-storage" }
solver-account = { path = "../solver-account" }
solver-delivery = { path = "../solver-delivery" }
solver-discovery = { path = "../solver-discovery" }
solver-order = { path = "../solver-order" }
solver-settlement = { path = "../solver-settlement" }

tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
async-trait = "0.1"

# For implementations
hex = "0.4"
alloy = { version = "0.8", features = ["full"] }
reqwest = "0.12"
bytes = "1.8"
