[package]
name = "solver-settlement"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8"
alloy-provider = "0.8"
alloy-rpc-types = "0.8"
alloy-sol-types = "0.8"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
solver-types = { path = "../solver-types" }
thiserror = "1.0"
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
reqwest = "0.12"
alloy-transport = "0.8"
alloy-transport-http = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
