[package]
name = "solver-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async trait support
async-trait = { workspace = true }

# Ethereum types
ethers-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Additional common types
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
uuid = { workspace = true }

# Streams
futures = { workspace = true }
tokio-stream = { workspace = true }

# Cryptography
sha3 = { workspace = true }
hex = { workspace = true }