[package]
name = "solver-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Ethereum types
ethers-core.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Common utilities
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
hex.workspace = true
sha3.workspace = true
bytes.workspace = true
