[package]
name = "solver-types"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8", features = ["std", "serde"] }
alloy-rpc-types = { version = "0.8" }
async-trait = "0.1"
bytes = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync"] }
toml = "0.8"
